--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "mesh-client (>=3.2.3,<4.0.0)",
   "azure-storage-blob (>=12.25.1,<13.0.0)",
   "pandas (>=2.3.0,<3.0.0)",
+  "azure-storage-queue (>=12.13.0,<13.0.0)",
 ]
 
 [tool.poetry]
