--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -63,29 +63,14 @@ updates:
       - dependency-name: nhsuk-frontend-jinja
 
     groups:
-      frontend:
-        patterns:
-          - jinja2
-          - whitenoise
-
       infra:
         patterns:
           - azure-identity
           - gunicorn
           - psycopg
 
-      lint_and_test:
-        patterns:
-          - factory-boy
-          - 'pytest*'
-          - '*playwright*'
-          - ruff
-          - time-machine
-
-      tools:
-        patterns:
-          - 'dotenv'
-          - 'ipdb'
+      dev:
+        dependency-type: development
 
   - package-ecosystem: 'terraform'
     directory: '/'
