--- a/.github/workflows/stage-1-commit.yaml
+++ b/.github/workflows/stage-1-commit.yaml
@@ -39,9 +39,19 @@ jobs:
     timeout-minutes: 2
     steps:
       - name: 'Checkout code'
-        uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Full history is needed to scan all commits
+          # By default, the checkout action just checks out the latest commit, creating a "shallow" clone.
+          # If we only scanned the latest commit, we might miss leaks that are not in the latest commit
+          # but are still present in previous commits on the branch.
+          #
+          # We don't want to checkout (and scan) the entire repository though, because that would mean
+          # 'bad' commits (including false-positives) block the CI for unrelated PRs, even if they're not
+          # on main, or part of the new branch.
+          #
+          # To keep PRs independent of each other, we can fetch with an "infinite" depth, rather than
+          # the special 0 value of actions/checkout, which means "fetch all history for all tags and branches"
+          depth: 0x7fffffff # INFINITE_DEPTH
+        uses: actions/checkout@v4
       - name: 'Scan secrets'
         uses: ./.github/actions/scan-secrets
   scan-dependencies:
