Control deployment pipeline concurrency
Ensure:
- 2 deployments don't run at the same time on the same environment
- deploy and destroy a review app don't run at the same time

--- a/.github/workflows/cicd-1-pull-request-closed.yaml
+++ b/.github/workflows/cicd-1-pull-request-closed.yaml
@@ -12,6 +12,8 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     environment: review
+    concurrency: deploy-review-${{ github.ref }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
