--- a/manage_breast_screening/notifications/compose.yml
+++ b/manage_breast_screening/notifications/compose.yml
@@ -4,7 +4,7 @@ services:
 
   azurite:
     container_name: azurite
-    command: "azurite --loose --blobHost 0.0.0.0 --blobPort 10000 --queueHost 0.0.0.0 --queuePort 10001"
+    command: "azurite --loose --skipApiVersionCheck --blobHost 0.0.0.0 --blobPort 10000 --queueHost 0.0.0.0 --queuePort 10001"
     image: mcr.microsoft.com/azure-storage/azurite
     ports:
       - 10000:10000
@@ -38,7 +38,7 @@ services:
     volumes:
       - ./store/mailboxes.jsonl:/app/mesh_sandbox/store/data/mailboxes.jsonl:ro
       - ./store/workflows.jsonl:/app/mesh_sandbox/store/data/workflows.jsonl:ro
-  
+
   cmapi-stub:
     build:
       context: ./tests/dependencies/cmapi_stub
