--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -50,4 +50,4 @@ jobs:
           echo Sleeping 15s
           sleep 15
 
-          scripts/bash/wait_ado_pipeline.sh "$RUN_ID" https://dev.azure.com/nhse-dtos dtos-manage-breast-screening
+          bash -x scripts/bash/wait_ado_pipeline.sh "$RUN_ID" https://dev.azure.com/nhse-dtos dtos-manage-breast-screening
