--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -47,7 +47,11 @@ jobs:
             --parameters commitSHA=${{inputs.commit_sha}} prNumber=${{inputs.pr_number}} environment=${{ matrix.environment }} \
             --output tsv --query id)
 
+          echo RUN_ID: "$RUN_ID"
+
           echo Sleeping 15s
           sleep 15
+
+          az pipelines runs show --id "$RUN_ID" --org https://dev.azure.com/nhse-dtos --project dtos-manage-breast-screening
 
           bash -x scripts/bash/wait_ado_pipeline.sh "$RUN_ID" https://dev.azure.com/nhse-dtos dtos-manage-breast-screening
