--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -59,24 +59,24 @@ jobs:
   #     terraform_version: '${{ needs.metadata.outputs.terraform_version }}'
   #     version: '${{ needs.metadata.outputs.version }}'
   #   secrets: inherit
-  build-stage:
-    name: 'Build stage'
-    needs: [metadata]
-    uses: ./.github/workflows/stage-3-build.yaml
-    with:
-      build_datetime: '${{ needs.metadata.outputs.build_datetime }}'
-      build_timestamp: '${{ needs.metadata.outputs.build_timestamp }}'
-      build_epoch: '${{ needs.metadata.outputs.build_epoch }}'
-      nodejs_version: '${{ needs.metadata.outputs.nodejs_version }}'
-      python_version: '${{ needs.metadata.outputs.python_version }}'
-      terraform_version: '${{ needs.metadata.outputs.terraform_version }}'
-      version: '${{ needs.metadata.outputs.version }}'
-    secrets: inherit
+  # build-stage:
+  #   name: 'Build stage'
+  #   needs: [metadata]
+  #   uses: ./.github/workflows/stage-3-build.yaml
+  #   with:
+  #     build_datetime: '${{ needs.metadata.outputs.build_datetime }}'
+  #     build_timestamp: '${{ needs.metadata.outputs.build_timestamp }}'
+  #     build_epoch: '${{ needs.metadata.outputs.build_epoch }}'
+  #     nodejs_version: '${{ needs.metadata.outputs.nodejs_version }}'
+  #     python_version: '${{ needs.metadata.outputs.python_version }}'
+  #     terraform_version: '${{ needs.metadata.outputs.terraform_version }}'
+  #     version: '${{ needs.metadata.outputs.version }}'
+  #   secrets: inherit
 
   deploy-stage:
     if: contains(github.event.pull_request.labels.*.name, 'deploy')
     name: Deploy stage
-    needs: [build-stage]
+    needs: [metadata]
     permissions:
       id-token: write
     uses: ./.github/workflows/stage-4-deploy.yaml
