--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -15,6 +15,11 @@ on:
         description: Pull request number when used in a pull request
         required: false
         type: string
+      run_database_seeding:
+        description: Run database seeding or not
+        required: false
+        type: boolean
+
 
 jobs:
   deploy:
