--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
   "azure-storage-queue (>=12.13.0,<13.0.0)",
   "pyyaml (>=6.0.2,<7.0.0)",
   "rules (>=3.5,<4.0)",
+  "authlib (>=1.6.1,<2.0.0)",
+  "cryptography (>=42.0.0,<43.0.0)",
 ]
 
 [tool.poetry]
