--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,7 @@
     "MD024": { "siblings_only": true },
     "MD033": false
   },
-  "python.testing.pytestArgs": [
-    "."
-  ],
+  "python.testing.pytestArgs": ["."],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true
 }
