--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest": "^30.1.1",
     "jest-environment-jsdom": "^30.1.1",
     "jsdom": "^26.1.0",
+    "outdent": "^0.8.0",
     "prettier": "^3.5.3",
     "rollup": "^4.49.0",
     "sass-embedded": "^1.91.0",
