Implement CIS2 back channel logout endpoint
CIS2 can trigger a back channel logout event. Typically this occurs when
a user removes their smart card from a reader. We need to implement an
endpoint in our service to receive the POST request that results from
this.

This commit:

- Implements an endpoint to process the POST request, handling the
  logout_token that we receive from CIS2.
    * Retrieves the appropriate public key from the CIS2 jwks endpoint so we
      can verify the token.
    * Evaluates the validity of the claims received, according to rules
      outlined in the CIS2 docs.
    * Signs out all sessions for the relevant user if the token is valid.
- Adds a system test
- Sets test values for all CIS2 config values in settings_test.py

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -17,3 +17,5 @@ infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:32
 infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:33
 infrastructure/terraform/resource_group_init/storage.bicep:generic-api-key:59
 infrastructure/terraform/resource_group_init/keyVault.bicep:generic-api-key:10
+manage_breast_screening/config/settings_test.py:private-key:34
+manage_breast_screening/config/settings_test.py:public-key:61
