--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
   "rules (>=3.5,<4.0)",
   "authlib (>=1.6.1,<2.0.0)",
   "cryptography (>=42.0.0,<43.0.0)",
+  "django-qsessions (>=2.0.0,<3.0.0)",
 ]
 
 [tool.poetry]
