--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -38,7 +38,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     outputs:
-      notifications-changed: ${{ steps.notifications-changes.outputs.notifications == 'true' }}
+      frontend-changed: ${{ steps.path-changes.outputs.frontend == 'true' }}
+      notifications-changed: ${{ steps.path-changes.outputs.notifications == 'true' }}
 
     services:
       postgres:
@@ -59,9 +60,20 @@ jobs:
 
       - name: Detect notifications code changes
         uses: dorny/paths-filter@v3
-        id: notifications-changes
+        id: path-changes
         with:
           filters: |
+            frontend:
+              - 'manage_breast_screening/assets/**'
+              - 'manage_breast_screening/auth/**'
+              - 'manage_breast_screening/clinics/**'
+              - 'manage_breast_screening/core/**'
+              - 'manage_breast_screening/config/**'
+              - 'manage_breast_screening/data/**'
+              - 'manage_breast_screening/mammograms/**'
+              - 'manage_breast_screening/nonprod/**'
+              - 'manage_breast_screening/participants/**'
+              - 'manage_breast_screening/static/**'
             notifications:
               - 'manage_breast_screening/notifications/**'
 
@@ -78,19 +90,8 @@ jobs:
       - name: Install dependencies
         run: make dependencies
 
-      - name: Install Playwright browsers
-        run: poetry run playwright install chromium --with-deps
-
       - name: 'Run unit test suite'
         run: make test-unit
-        env:
-          DATABASE_NAME: postgres
-          DATABASE_PASSWORD: postgres
-          DATABASE_USER: postgres
-          DATABASE_HOST: localhost
-
-      - name: 'Run system test suite'
-        run: make test-ui
         env:
           DATABASE_NAME: postgres
           DATABASE_PASSWORD: postgres
@@ -136,6 +137,54 @@ jobs:
 
       - name: 'Run notifications integration test suite'
         run: make test-integration
+        env:
+          DATABASE_NAME: postgres
+          DATABASE_PASSWORD: postgres
+          DATABASE_USER: postgres
+          DATABASE_HOST: localhost
+
+  frontend-integration-test:
+    needs: test
+    if: needs.test.outputs.frontend-changed == 'true'
+    name: 'Frontend Tests'
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    services:
+      postgres:
+        image: postgres:17.4-alpine3.21
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v5
+
+      - name: Install poetry
+        run: pipx install poetry
+
+      - name: Set up Python
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
+        with:
+          python-version: '${{inputs.python_version}}'
+          cache: poetry
+          cache-dependency-path: ./poetry.lock
+
+      - name: Install dependencies
+        run: make dependencies
+
+      - name: Install Playwright browsers
+        run: poetry run playwright install chromium --with-deps
+
+      - name: 'Run Playwright system tests'
+        run: make test-ui
         env:
           DATABASE_NAME: postgres
           DATABASE_PASSWORD: postgres
