--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = [{ name = "Your Name", email = "you@example.com" }]
 license = { text = "MIT" }
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0.0"
 dependencies = [
   "django (>=5.1.7,<6.0.0)",
   "dotenv (>=0.9.9,<0.10.0)",
@@ -26,6 +26,7 @@ dependencies = [
   "authlib (>=1.6.1,<2.0.0)",
   "cryptography (>=42.0.0,<43.0.0)",
   "django-qsessions (>=2.0.0,<3.0.0)",
+  "business-python (>=2.1.0,<3.0.0)",
 ]
 
 [tool.poetry]
