--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -98,44 +98,16 @@ jobs:
           DATABASE_USER: postgres
           DATABASE_HOST: localhost
 
-  notifications-integration-test:
-    needs: test
-    if: needs.test.outputs.notifications-changed == 'true'
-    name: 'Notifications Integration Tests'
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    services:
-      postgres:
-        image: postgres:17.4-alpine3.21
-        ports:
-          - 5432:5432
+      - name: 'Run system test suite'
+        run: make test-ui
         env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - name: 'Checkout code'
-        uses: actions/checkout@v5
-
-      - name: Install poetry
-        run: pipx install poetry
-
-      - name: Set up Python
-        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c
-        with:
-          python-version: '${{inputs.python_version}}'
-          cache: poetry
-          cache-dependency-path: ./poetry.lock
-
-      - name: Install dependencies
-        run: make dependencies
+          DATABASE_NAME: postgres
+          DATABASE_PASSWORD: postgres
+          DATABASE_USER: postgres
+          DATABASE_HOST: localhost
 
       - name: 'Run notifications integration test suite'
+        if: steps.filter.outputs.notifications == 'true'
         run: make test-integration
         env:
           DATABASE_NAME: postgres
@@ -143,48 +115,9 @@ jobs:
           DATABASE_USER: postgres
           DATABASE_HOST: localhost
 
-  frontend-integration-test:
-    needs: test
-    if: needs.test.outputs.frontend-changed == 'true'
-    name: 'Frontend Tests'
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    services:
-      postgres:
-        image: postgres:17.4-alpine3.21
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    steps:
-      - name: 'Checkout code'
-        uses: actions/checkout@v5
-
-      - name: Install poetry
-        run: pipx install poetry
-
-      - name: Set up Python
-        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c
-        with:
-          python-version: '${{inputs.python_version}}'
-          cache: poetry
-          cache-dependency-path: ./poetry.lock
-
-      - name: Install dependencies
-        run: make dependencies
-
-      - name: Install Playwright browsers
-        run: poetry run playwright install chromium --with-deps
-
-      - name: 'Run Playwright system tests'
-        run: make test-ui
+      - name: 'Run notifications end to end test suite'
+        if: steps.filter.outputs.notifications == 'true'
+        run: make test-end-to-end
         env:
           DATABASE_NAME: postgres
           DATABASE_PASSWORD: postgres
