--- a/manage_breast_screening/notifications/compose.yml
+++ b/manage_breast_screening/notifications/compose.yml
@@ -12,6 +12,7 @@ services:
     profiles:
       - development
       - integration
+      - end_to_end
 
   mesh-sandbox:
     build:
@@ -34,6 +35,7 @@ services:
     profiles:
       - development
       - integration
+      - end_to_end
     volumes:
       - ./store/mailboxes.jsonl:/app/mesh_sandbox/store/data/mailboxes.jsonl:ro
       - ./store/workflows.jsonl:/app/mesh_sandbox/store/data/workflows.jsonl:ro
@@ -46,6 +48,8 @@ services:
     profiles:
       - development
       - integration
+      - end_to_end
+
     ports:
       - '8888:8888'
     healthcheck:
@@ -64,3 +68,4 @@ services:
         condition: service_healthy
     profiles:
       - integration
+      - end_to_end
