--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
   "cryptography (>=42.0.0,<43.0.0)",
   "django-qsessions (>=2.0.0,<3.0.0)",
   "business-python (>=2.1.0,<3.0.0)",
+  "django-extensions (>=4.1,<5.0)",
 ]
 
 [tool.poetry]
