--- a/manage_breast_screening/data/demo_data.yml
+++ b/manage_breast_screening/data/demo_data.yml
@@ -14,3 +14,9 @@ providers:
           - file: 'east_tester_three_years_ago_clinic_data.yml'
           - file: 'east_tester_one_week_ago_clinic_data.yml'
           - file: 'east_tester_today_clinic_data.yml'
+  - name: 'Test Provider'
+    id: 2a3e50e9-7e49-4c2b-8c9c-9b1f7b3a1aa5
+    settings:
+      - name: 'Test BSU'
+        id: 8f2a1b3c-4d5e-6f7a-8b9c-0d1e2f3a4b5d
+        clinics: []
