Fix casing of symptom_id for LUMP
It looks like the symptom type was changed in this PR
https://github.com/NHSDigital/dtos-manage-breast-screening/commit/1bfb78e8c953ef2513641f5b0dcd0d31374feb96#diff-0e47d00409d7a31f731cd1911a4a337b21eb3fd4cf348aa3315fa35891db6175

now causing a db error when trying to deploy
because this test data should be in all caps?

--- a/manage_breast_screening/data/east_tester_today_clinic_data.yml
+++ b/manage_breast_screening/data/east_tester_today_clinic_data.yml
@@ -88,7 +88,7 @@ clinic:
               postcode: B2 7E9
         symptoms:
           - id: e9cc27f6-8e6f-4b83-890c-d73590c40f81
-            symptom_type_id: lump
+            symptom_type_id: LUMP
             area: RIGHT_BREAST
             when_started: LESS_THAN_THREE_MONTHS
 
