--- a/manage_breast_screening/tsconfig.json
+++ b/manage_breast_screening/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "module": "ESNext",
+    "strict": true,
     "target": "ES2015"
   },
   "include": ["**/*.js"],
