Turn off ESLint rules that are handled by TypeScript

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,6 +5,7 @@
     "module": "Preserve",
     "moduleResolution": "Node",
     "noEmit": true,
+    "noUnusedLocals": true,
     "skipLibCheck": true,
     "strict": false,
     "strictBindCallApply": true,
