--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compile:js": "rollup -c rollup.config.js --sourcemap",
     "compile:js:watch": "npm run compile:js -- --watch",
     "lint": "npm run lint:js && npm run lint:types && npm run lint:prettier",
-    "lint:js": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color .",
+    "lint:js": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --max-warnings 0 .",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:prettier": "prettier --cache --cache-location .cache/prettier --cache-strategy content --color --check .",
     "lint:prettier:fix": "prettier --write .",
