--- a/.github/workflows/stage-3-build.yaml
+++ b/.github/workflows/stage-3-build.yaml
@@ -40,6 +40,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   DOCKER_METADATA_PR_HEAD_SHA: true
+  REPOSITORY_LOWERCASE: nhsdigital/dtos_manage_breast_screening
 
 jobs:
   build:
@@ -62,6 +63,9 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # 3.11.1
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -87,6 +91,9 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             COMMIT_SHA=${{ inputs.commit_sha }}
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.REPOSITORY_LOWERCASE }}:buildcache
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.REPOSITORY_LOWERCASE }}:buildcache,mode=max
+
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
         with:
