--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
   "django-qsessions (>=2.0.0,<3.0.0)",
   "business-python (>=2.1.0,<3.0.0)",
   "django-extensions (>=4.1,<5.0)",
+  "azure-monitor-opentelemetry (>=1.8.1,<2.0.0)",
 ]
 
 [tool.poetry]
