--- a/manage_breast_screening/notifications/compose.yml
+++ b/manage_breast_screening/notifications/compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: azurite
     command: 'azurite --loose --skipApiVersionCheck --blobHost 0.0.0.0 --blobPort 10000 --queueHost 0.0.0.0 --queuePort 10001'
     image: mcr.microsoft.com/azure-storage/azurite
+    restart: always
     ports:
       - 10000:10000
       - 10001:10001
