don't download browsers we're not using

--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -226,7 +226,7 @@ jobs:
         run: make dependencies
 
       - name: Install Playwright browsers
-        run: poetry run playwright install chromium --with-deps
+        run: poetry run playwright install chromium --with-deps --only-shell
 
       - name: 'Run Playwright system tests'
         run: make test-ui
