DTOSS-11203: Manage invite basic smoke test
To enable continuous deployment we must have full confidence that each test environment is working after we deploy a new version.
Add a basic smoke test after the deployment is done for each environment. It could simply check the healthcheck URL and loop until it's up.
We could create a simple healthcheck page. Maybe return the expected commit SHA.

DTOSS-11203: Turn off entra ID for login for review environment

DTOSS-11203: Add a smoke test for the pipeline

--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -71,6 +71,7 @@ jobs:
       python_version: '${{ needs.metadata.outputs.python_version }}'
       terraform_version: '${{ needs.metadata.outputs.terraform_version }}'
       version: '${{ needs.metadata.outputs.version }}'
+      commit_sha: '${{ github.event.pull_request.head.sha }}'
     secrets: inherit
   deploy-stage:
     if: contains(github.event.pull_request.labels.*.name, 'deploy')
