feat(prod): DTOSS-11293 - create production environment with enhanced RBAC
- Add production Terraform variables configuration
- Enable secure Key Vault integration for secret management
- Configure production DNS (manage-breast-screening.nhs.uk)
- Enable geo-redundant PostgreSQL backups for data protection
- Set up production API endpoints and Front Door profile
- Disable demo data seeding for production environment
- Enable alerting and monitoring for production workloads
- Enhance resource group init with RBAC for Entra ID groups
- Implement group-based permission model in Bicep templates
- Enable use_apex_domain to the environment

Breaking changes: None (new production environment)
Security: Key Vault protection and RBAC groups enabled

Add false positive rbac role GUID entries to .gitleaksignore

rename variables and remove from variables.yml and variables.tfvars variables with default values the same as values set

including '/healthcheck' as always_allowed_paths on Front Door

removing default value with module and let in root

removing unused variable NO_OP_DATE

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -15,6 +15,9 @@ infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:30
 infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:31
 infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:32
 infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:33
+infrastructure/terraform/resource_group_init/keyVault.bicep:generic-api-key:12
+infrastructure/terraform/resource_group_init/core.bicep:generic-api-key:15
+infrastructure/terraform/resource_group_init/core.bicep:generic-api-key:16
 infrastructure/terraform/resource_group_init/storage.bicep:generic-api-key:59
 infrastructure/terraform/resource_group_init/keyVault.bicep:generic-api-key:10
 manage_breast_screening/config/settings_test.py:private-key:34
