fix(infra): support apex domain in smoke test for production
- Add USE_APEX_DOMAIN parameter to container_app_smoke_test.sh
- Update workflow to pass use_apex_domain from environment config
- Add smoke test troubleshooting docs to infra-faq.md

Fixes smoke test failures for production environment which uses
apex domain (manage-breast-screening.nhs.uk) instead of subdomain
(prod.manage-breast-screening.nhs.uk).

--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -63,4 +63,5 @@ jobs:
       - name: Basic application smoke test
         run: |
           dns_zone_name=$( grep dns_zone_name infrastructure/environments/${{ matrix.environment }}/variables.tfvars | awk -F'"' '{print $2}' )
-          scripts/bash/container_app_smoke_test.sh "${{ matrix.environment }}" "${{ inputs.commit_sha }}" "${dns_zone_name}" "${{inputs.pr_number}}"
+          use_apex_domain=$( grep use_apex_domain infrastructure/environments/${{ matrix.environment }}/variables.tfvars | awk '{print $3}' || echo "false" )
+          scripts/bash/container_app_smoke_test.sh "${{ matrix.environment }}" "${{ inputs.commit_sha }}" "${dns_zone_name}" "${{inputs.pr_number}}" "${use_apex_domain}"
