Update PR message
We use basic auth instead of entra ID

--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -99,4 +99,4 @@ jobs:
           message: |
             The review app is available at this URL:
             https://pr-${{ github.event.pull_request.number }}.manage-breast-screening.non-live.screening.nhs.uk
-            You must authenticate with Entra ID
+            You must authenticate with HTTP basic authentication. Ask the team for credentials.
