Fix Insights testing
Unless the Insights logger is mocked everywhere
the code will try to call the real instance - so
setting autouse to true by default and allowing
option to skip.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ addopts = "--doctest-modules"
 markers = [
   "system: mark a test as a system test",
   "integration: mark a test as an integration test",
+  "skip_insights_mock: don't auto use the mock_insights_logging fixture"
 ]
 
 [tool.ruff]
