--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "typescript-eslint": "^8.46.3"
   },
   "engines": {
-    "node": "^20.9.0 || ^22.11.0"
+    "node": "^24.11.0",
+    "npm": "^11.6.1"
   }
 }
